src/frontend/snapshots/Shlang__frontend__parser_test__nested_block.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"func(b){do{1};}\")"
---
Ok(
    Function(b){
        Do{
            Result(
                Number(1),
            )[11,12],
        }[10,13],
    }[4,15],
)
