src/frontend/snapshots/Shlang__frontend__parser_test__single_var_decl.snap
---
source: src/frontend/parser_test.rs
expression: "parse_full(\"var a;\")"
---
[
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: Value(
                        Null,
                    ),
                    span: (
                        4,
                        5,
                    ),
                },
            },
        ),
        span: (
            4,
            6,
        ),
    },
]
