src/frontend/snapshots/Shlang__frontend__parser_test__struct_body.snap
---
source: src/frontend/parser_test.rs
expression: "parse_expr (\"struct abc{};\")"
---
Ok(
    StructDef {
        name: Some(
            "abc",
        ),
        fields: [],
    }[7,12],
)
