src/frontend/snapshots/Shlang__frontend__parser_test__var_declare_and_assign_value.snap
---
source: src/frontend/parser_test.rs
expression: "parse_full(\"var a = 2;\")"
---
[
    Spanned {
        unspanned: Declaration(
            Declaration {
                var_name: "a",
                value: Spanned {
                    unspanned: Value(
                        Num(
                            2.0,
                        ),
                    ),
                    span: (
                        8,
                        9,
                    ),
                },
            },
        ),
        span: (
            4,
            7,
        ),
    },
]
